# elqcp

./: .gitignore  CMakeLists.txt  README.md  plot_scaling.py  timing_results.csv
examples/: compare_solvers.c  compare_solvers.cpp  nonlinear_smoothing_sqp.cpp  plot_nonlinear_smoothing.py
include/: elqcp.h  elqcp.hpp  linalg.h
src/: kkt_solver.c  kkt_sparse_solver.c  kkt_sparse_solver.cpp  linalg.c  riccati.c  riccati.cpp
